--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -6,40 +6,68 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto - Club Atletico Baradero</title>
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
 <body>
     <header>
-        <img class="escudo" src="../img/escudo.png" alt="imagen-del-escudo-del-club-atletico-baradero">
-        <h1 class="titulo"> <strong>Club Atletico Baradero</strong></h1>
-        <nav class="botones">
-            <a href="../index.html">inicio</a>
-            <a href="./historia.html">historia</a>
-            <a href="./deportes.html">deportes</a>
-            <a href="./galeria.html">galeria</a>
-            <a href="./contacto.html">contacto</a>
-        </nav>
+        <nav class="navbar navbar-expand-lg bg-dark">
+            <div class="container-fluid">
+              <img class="escudo" src="../img/escudo.png" alt="imagen-del-escudo-del-club-atletico-baradero">
+              <a class="navbar-brand text-light" href="../index.html">Club Atletico Baradero</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav ">
+                  <a class="nav-link text-light" href="../pages/historia.html">Historia</a>
+                  <a class="nav-link text-light" href="../pages/deportes.html">Deportes</a>
+                  <a class="nav-link text-light" href="../pages/galeria.html">Galeria</a>
+                  <a class="nav-link text-light" href="../pages/contacto.html">Contacto</a>
+                </div>
+              </div>
+            </div>
+          </nav>
     </header>
 
 
 
     <main>
-
+      <section id="formulario">
+        <h2 class="titulo-contacto">Escríbenos aquí</h2>
+      <form class="contacto">
+        <div class="mb-3">
+          <label for="exampleFormControlInput1" class="form-label">Correo Electrónico:</label>
+          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+        </div>
+        <div class="mb-3">
+          <label for="exampleFormControlTextarea1" class="form-label">Mensaje:</label>
+          <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+        </div>
+        <button type="submit" class="btn btn-dark">Enviar</button>
+      </form>
+    </section>
     </main>
 
 
-    <footer>
-            <h4>
-                Seguinos en
-            </h4>
-            <button><a class="boton-de-instagram"
-                    href="https://www.instagram.com/clubatleticobaradero/">instagram</a></button>
-            <button><a class="boton-de-facebook"
-                    href="https://www.facebook.com/ClubAtleticoBaradero">facebook</a></button>
-    </footer>
+    <footer class="bg-dark">
+      <div class="footer">
+      <div class="titulo-footer">
+        <img class="escudo" src="../img/escudo.png" alt="imagen-del-escudo-del-club-atletico-baradero">
+        <h3>Club Atletico Baradero</h3>
+      </div>
+      <div class="botones-footer">
+      <a class="boton-de-instagram" href="https://www.instagram.com/clubatleticobaradero/"><img src="../img/logo-instagram.png" alt=""></a>
+      <a class="boton-de-facebook" href="https://www.facebook.com/ClubAtleticoBaradero"><img src="../img/logo-facebook.png" alt=""></a>
+      <a class="boton-wpp" href=""><img src="../img/logo-whatsapp.png" alt=""></a>
+    </div>
+    </div>
+  </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
