--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -6,180 +6,128 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Galeria - Club Atletico Baradero</title>
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
 <body>
     <header>
-        <img class="escudo" src="../img/escudo.png" alt="imagen-del-escudo-del-club-atletico-baradero">
-        <h1 class="titulo"> <strong>Club Atletico Baradero</strong></h1>
-        <nav class="botones">
-            <a href="../index.html">inicio</a>
-            <a href="./historia.html">historia</a>
-            <a href="./deportes.html">deportes</a>
-            <a href="./galeria.html">galeria</a>
-            <a href="./contacto.html">contacto</a>
+        <nav class="navbar navbar-expand-lg bg-dark">
+            <div class="container-fluid">
+                <img class="escudo" src="../img/escudo.png" alt="imagen-del-escudo-del-club-atletico-baradero">
+                <a class="navbar-brand text-light" href="../index.html">Club Atletico Baradero</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav ">
+                        <a class="nav-link text-light" href="../pages/historia.html">Historia</a>
+                        <a class="nav-link text-light" href="../pages/deportes.html">Deportes</a>
+                        <a class="nav-link text-light" href="../pages/galeria.html">Galeria</a>
+                        <a class="nav-link text-light" href="../pages/contacto.html">Contacto</a>
+                    </div>
+                </div>
+            </div>
         </nav>
     </header>
     <main>
-        <section id="carrusel-futbol">
-            <div id="carouselExampleCaptions" class="carousel slide">
-                <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-                        aria-current="true" aria-label="Slide 1"></button>
-                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-                        aria-label="Slide 2"></button>
-                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-                        aria-label="Slide 3"></button>
+
+        <section id="galeria">
+            <div class="plantel-futbol-masculino">
+                <img src="../img/plantel-futbol-masculino.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <p class="card-text">Plantel Primera Division</p>
                 </div>
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="../img/plantel-futbol-masculino.jpg" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h3>Futbol Masculino</h5>
-                                <p>Plantel de la primera division masculina del Club Atletico Baradero</p>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <img src="../img/plantel-futbol-femenino.jpg" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h4>Futbol Femenino</h5>
-                                <p>Plantel de la primera division femenina del Club Atletico Baradero</p>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <img src="../img/plantel-futbol-reserva.jpg" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5>Futbol Inferiores</h5>
-                            <p>Plantel de la sub 21 del Club Atletico Baradero</p>
-                        </div>
-                    </div>
+            </div>
+            <div class="plantel-futbol-reserva">
+                <img src="../img/plantel-futbol-reserva.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <p class="card-text">Plantel SUB-21</p>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
-                    data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
-                    data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
+            </div>
+            <div class="plantel-futbol-femenino">
+                <img src="../img/plantel-futbol-femenino.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <p class="card-text">Plantel Primera Division Femenina</p>
+                </div>
+            </div>
+            <div class="plantel-futbol-femenino-sub17">
+                <img src="../img/plantel-futbol-femenino-sub17.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <p class="card-text">Plantel SUB-17 Femenina</p>
+                </div>
+            </div>
+            <div class="plantel-basquet-masculino">
+                <img src="../img/plantel-basquet-masculino.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <p class="card-text">Plantel Primera Division</p>
+                </div>
+            </div>
+            <div class="plantel-basquet-femenino">
+                <img src="../img/plantel-basquet-femenino.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <p class="card-text">Plantel Primera Division Femenina</p>
+                </div>
+            </div>
+            <div class="plantel-basquet-infantil">
+                <img src="../img/plantel-basquet-infantil.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <p class="card-text">Plantel SUB-13</p>
+                </div>
+            </div>
+            <div class="plantel-voley">
+                <img src="../img/plantel-voley.JPG" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <p class="card-text">Plantel Voley</p>
+                </div>
+            </div>
+            <div class="plantel-voley-maxi">
+                <img src="../img/plantel-voley-maxi.JPG" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <p class="card-text">Plantel MaxiVoley</p>
+                </div>
+            </div>
+            <div class="plantel-voley-femenino">
+                <img src="../img/plantel-voley-femenino.JPG" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <p class="card-text">Plantel SUB-15 Femenino</p>
+                </div>
+            </div>
+            <div class="plantel-patinaje">
+                <img src="../img/plantel-patinaje.JPG" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <p class="card-text">Plantel Patinaje</p>
+                </div>
+            </div>
+            <div class="plantel-patinaje-infantil">
+                <img src="../img/plantel-patinaje-infantil.JPG" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <p class="card-text">Plantel Patinaje Infantil</p>
+                </div>
             </div>
         </section>
-
-
-        <section id="carrusel-basquet">
-            <div id="carouselExampleCaptionsBasquet" class="carousel slide">
-                <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-                        aria-current="true" aria-label="Slide 1"></button>
-                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-                        aria-label="Slide 2"></button>
-                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-                        aria-label="Slide 3"></button>
-                </div>
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="../img/plantel-basquet-masculino.jpg" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h3>Basquet Masculino</h5>
-                                <p>Plantel de la primera division masculina del Club Atletico Baradero</p>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <img src="../img/plantel-basquet-femenino.jpg" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h4>Basquet Femenino</h5>
-                                <p>Plantel de la primera division femenina del Club Atletico Baradero</p>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <img src="../img/plantel-basquet-infantil.jpg" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5>Basquet Infantil</h5>
-                            <p>Uno de los planteles del basquet infantil del Club Atletico Baradero</p>
-                        </div>
-                    </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptionsBasquet"
-                    data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptionsBasquet"
-                    data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
-            </div>
-        </section>
-
-        <section id="carrusel-voley">
-            <div id="carouselExampleCaptionsVoley" class="carousel slide">
-                <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-                        aria-current="true" aria-label="Slide 1"></button>
-                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-                        aria-label="Slide 2"></button>
-                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-                        aria-label="Slide 3"></button>
-                </div>
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="../img/plantel-voley.JPG" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h3>Voley</h5>
-                                <p>Plantel masculino y femenino del Club Atletico Baradero</p>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <img src="../img/plantel-voley-femenino.JPG" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h4>Voley Femenino</h5>
-                                <p>Plantel de voley sub-15 femenino del Club Atletico Baradero</p>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <img src="../img/plantel-voley-maxi.JPG" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5>Maxi Voley</h5>
-                            <p>Plantel de maxi voley del Club Atletico Baradero</p>
-                        </div>
-                    </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptionsVoley"
-                    data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptionsVoley"
-                    data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
-            </div>
-        </section>
-
 
     </main>
-    <footer>
-            <h3>
-                Seguinos en
-            </h3>
-            <button><a class="boton-de-instagram"
-                    href="https://www.instagram.com/clubatleticobaradero/">instagram</a></button>
-            <button><a class="boton-de-facebook"
-                    href="https://www.facebook.com/ClubAtleticoBaradero">facebook</a></button>
+    <footer class="bg-dark">
+        <div class="footer">
+            <div class="titulo-footer">
+                <img class="escudo" src="../img/escudo.png" alt="imagen-del-escudo-del-club-atletico-baradero">
+                <h3>Club Atletico Baradero</h3>
+            </div>
+            <div class="botones-footer">
+                <a class="boton-de-instagram" href="https://www.instagram.com/clubatleticobaradero/"><img
+                        src="../img/logo-instagram.png" alt=""></a>
+                <a class="boton-de-facebook" href="https://www.facebook.com/ClubAtleticoBaradero"><img
+                        src="../img/logo-facebook.png" alt=""></a>
+                <a class="boton-wpp" href=""><img src="../img/logo-whatsapp.png" alt=""></a>
+            </div>
+        </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
-        </script>
-
+    </script>
 </body>
 
 </html>
